@@ -28,6 +28,7 @@ TinkerPop 3.2.2 (NOT OFFICIALLY RELEASED YET)
 
 * Removed support for submitting a Java serialized `Traversal` to Gremlin Server.
 * Removed a largely internal feature that supported automatic unrolling of traversers in the Gremlin Driver.
+* Made it possible to directly initialize `OpProcessor` implementations with server `Settings`.
 * Fixed a potential leak of a `ReferenceCounted` resource in Gremlin Server.
 * Added class registrations for `Map.Entry` implementations to `GryoMapper`.
 
